# desktop

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  verify.yml
docs/: MOBILE.md  PRIVACY.md  RELEASE.md  ios_autofill_integration.md
docs/design/: 2026-05-25-keyfount-desktop-design.md
docs/superpowers/plans/: 2026-05-26-mobile-ui-implementation.md  (+1 more)
scripts/: generate-golden-vectors.mjs
src/: App.tsx  Logo.tsx  api.ts  i18n.test.ts  i18n.ts  icons.tsx  main.tsx  motion.ts  platform.test.ts  platform.ts  state.ts  theme.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autolock.rs  domain.rs  error.rs  lib.rs  main.rs  session.rs  types.rs
src-tauri/src/commands/: accounts.rs  biometric.rs  clipboard.rs  export.rs  generation.rs  mod.rs  native.rs  pending_ops.rs  session.rs  settings.rs  sync.rs  vaults.rs
src-tauri/src/crypto/: argon2.rs  emoji_table.rs  fingerprint.rs  master_kek.rs  memorable.rs  mod.rs  pin.rs  render.rs  wordlist.rs
src-tauri/src/native/: clipboard.rs  hotkey.rs  mod.rs  tray.rs  vibrancy.rs
src-tauri/src/native/autofill/: mod.rs
src-tauri/src/native/biometric/: macos.rs  mod.rs  stub.rs  windows.rs
src-tauri/src/store/: accounts.rs  db_key.rs  handle.rs  mod.rs  pending_ops.rs  pin_sidecar.rs  schema.rs  settings.rs  sites.rs  vaults.rs
src-tauri/src/sync/: client.rs  mod.rs  payload.rs  session.rs
src-tauri/tests/: golden_vectors.rs  sqlcipher_benchmark.rs
src/components/: AccountAvatar.tsx  AccountDetailScreen.tsx  AccountList.tsx  AccountsView.tsx  AppShell.tsx  ConfirmModal.tsx  DangerZone.tsx  GeneratorView.tsx  Header.tsx  LastSyncedLine.tsx  LoadingScreen.tsx  MainScreen.tsx  PageHeader.tsx  PinManager.test.tsx  PinManager.tsx  ProfileEditor.tsx  QuickSearchScreen.tsx  RotationPanel.test.tsx  RotationPanel.tsx  SettingsScreen.tsx  SetupScreen.tsx  Sidebar.tsx  SitesSection.tsx  SyncScreen.tsx  Titlebar.tsx  UnlockScreen.tsx  VaultExportImport.tsx  VaultsScreen.tsx
src/mobile/: BottomNav.test.tsx  BottomNav.tsx  MobileAccountDetailSheet.tsx  MobileApp.test.tsx  MobileApp.tsx  MobileShell.test.tsx  MobileShell.tsx  TopBar.test.tsx  TopBar.tsx  VaultAvatar.test.tsx  VaultAvatar.tsx  VaultSheet.test.tsx  VaultSheet.tsx  state.test.ts  state.ts  style.css
src/sync/: auto.ts  bus.ts  client.ts  manager.test.ts  manager.ts  payload.ts  pending.test.ts  pending.ts  status.ts
tests/: golden-vectors.json  smoke.test.ts
tests/e2e/: fixtures.ts
tests/e2e/desktop/: profile.spec.ts  (+9 more)
(+18 files in other folders)
