[package]
name = "keyfount"
version = "0.1.0"
description = "Deterministic password manager — native desktop and mobile app."
authors = ["Keyfount"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "keyfount_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.6"
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.22"
hex = "0.4"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v7", "serde"] }
once_cell = "1.20"

# IO / async
tokio = { version = "1.41", features = ["sync", "macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
futures = "0.3"

# Misc
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
publicsuffix = "2.3"
url = "2.5"

# Sync (port from extension)
ureq = { version = "2.10", features = ["json", "tls"] }
# opaque-ke is wired in M6.2 — the v3.0 API requires us to know the
# exact wire format the Keyfount server expects, which we'll finalise
# alongside the server's matching v3.0 upgrade. Until then the sync
# layer ships the HTTP client + payload encryption + session shape.

# OS keychain
keyring = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
tauri-plugin-liquid-glass = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"

[features]
default = []
# Apple Mac App Store build — omits the private NSGlassEffectView API
# and ships the public NSVisualEffectView fallback instead.
mas = []
# Enable Liquid Glass (private API). Off by default; CI builds it from a
# dedicated job that distributes only to GitHub Releases.
liquid-glass = ["dep:tauri-plugin-liquid-glass"]
# Autofill bridge (Accessibility API on macOS, UI Automation on Windows).
# Opt-in feature, also gated behind a runtime user preference.
autofill = []
# Biometric unlock via Touch ID / Windows Hello.
biometric = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
